crates/sui-prover/tests/snapshots/compile-error.fail.move.snap
---
source: crates/sui-prover/tests/integration.rs
expression: output
---
exiting with model building errors
error: unexpected token
  ┌─ tests/inputs/compile-error.fail.move:5:1
  │
4 │   assert!(true
  │          - To match this '('
5 │ 
  │ ^ Expected ')'
